--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LevelOne"></activity>
+        <activity
+            android:name=".LevelTwo"
+            android:label="@string/title_activity_level_two"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".LevelOne" />
         <activity android:name=".ProfilePage">
             <intent-filter>
                 <action android:name="android.intent.action.ProfilePage" />
