--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LevelThree"></activity>
+        <activity android:name=".LevelFour"></activity>
+        <activity android:name=".LevelThree" />
         <activity
             android:name=".HomePageActivity"
             android:label="@string/app_name"
@@ -44,7 +45,7 @@ android:label="@string/title_activity_level_two"
         </activity>
         <activity
             android:name=".HelpPageActivity"
-            android:label="@string/title_activity_help_page"></activity>
+            android:label="@string/title_activity_help_page" />
         <activity
             android:name=".CardCategoryActivity"
             android:label="@string/title_card_category" />
