--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LevelFour"></activity>
+        <activity android:name=".LevelFive"></activity>
+        <activity android:name=".LevelFour" />
         <activity android:name=".LevelThree" />
         <activity
             android:name=".HomePageActivity"
