--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LevelTwoEasy"></activity>
+        <activity android:name=".LevelThreeEasy"></activity>
+        <activity android:name=".LevelTwoEasy" />
         <activity android:name=".LevelOneEasy" />
         <activity android:name=".LevelFive" />
         <activity android:name=".LevelFour" />
