--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".CustomViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".HomePageActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <!--
-<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+
         -->
         <activity android:name=".LevelTwo" />
         <!--
@@ -45,7 +41,7 @@ android:label="@string/title_activity_level_two"
         </activity>
         <activity
             android:name=".HelpPageActivity"
-            android:label="@string/title_activity_help_page"></activity>
+            android:label="@string/title_activity_help_page" />
         <activity
             android:name=".CardCategoryActivity"
             android:label="@string/title_card_category" />
